--- a/index.html
+++ b/index.html
@@ -1020,7 +1020,7 @@
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Data Scientist 1 Full Time - AMERICAN FAMILY INSURANCE</a><br> <span>June 2020 - Present</span></h2>
+					                  <h2><a href="#">Philips</a><br> <span>June 2020 - Present</span></h2>
 					                  <p>
 								<ul>
 											  <li>Designed a Graph Neural Network Aware Knowledge Graph for Information Retrieval and Reasoning for auto-claims and personal line insurance and product reference manual.</li>
