--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Us</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Sindhu Harish</strong> Experienced Software Engineer and an aspiring Data Science Enthusiast with a demonstrated history of working in the healthcare industry. Skilled in Jave, Python, Machine Learning, Relational & NoSQL, Graph Databases, Big data Hadoop, Spark and Reporting Analytical Tools like Tableau and Metabase. Strong information technology professional with a Bachelor of Engineering (B.E.) focused in Computer Science</p>
+										<p><strong>Hi I'm Sindhu Harish.</strong> I am an Experienced Software Engineer and an aspiring Data Science Enthusiast with a demonstrated history of working in the healthcare industry. Skilled in Jave, Python, Machine Learning, Relational & NoSQL, Graph Databases, Big data Hadoop, Spark and Reporting Analytical Tools like Tableau and Metabase. Strong information technology professional with a Bachelor of Engineering (B.E.) focused in Computer Science</p>
 <!--										<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>-->
 									</div>
 								</div>
