--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(images/about2.png);"></div>
+				<div class="author-img" style="background-image: url(images/profile_pic.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Sindhu Harish</a></h1>
 				<span class="position"><a href="#">Senior Software Engineer</a> in Bangalore</span>
 			</div>
@@ -100,6 +100,8 @@
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
+											   <br></br>
+											   <br></br>
 						   					<h1>Hi! <br>I'm Sindhu Harish</h1>
 						   					<p><a href="files/Sindhu_Resume.pdf" class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
 											</div>
@@ -108,7 +110,7 @@
 					   		</div>
 				   		</div>
 				   	</li>
-				   	<li style="background-image: url(images/img_bg_2.jpg);">
+				   	<li style="background-image: url(images/img-5.jpg);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
@@ -136,7 +138,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Us</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Sindhu Harish.</strong> I am an Experienced Software Engineer and an aspiring Data Science Enthusiast with a demonstrated history of working in the healthcare industry. Skilled in Jave, Python, Machine Learning, Relational & NoSQL, Graph Databases, Big data Hadoop, Spark and Reporting Analytical Tools like Tableau and Metabase. Strong information technology professional with a Bachelor of Engineering (B.E.) focused in Computer Science</p>
+										<p><strong>Hi I'm Sindhu Harish.</strong> I am an Seasoned Senior Software Engineer with 4 years of experience and an aspiring Data Science Enthusiast with a demonstrated history of working in the healthcare industry. Skilled in Jave, Python, Machine Learning, Relational & NoSQL, Big data Hadoop, Spark and Reporting Analytical Tools like Tableau and Metabase. Strong information technology professional with a Bachelor of Engineering (B.E.) focused in Computer Science</p>
 <!--										<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>-->
 									</div>
 								</div>
@@ -1020,15 +1022,19 @@
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Philips</a><br> <span>June 2020 - Present</span></h2>
+					                  <h2><a href="#">Philips</a><br> <span>July 2019 - Present</span></h2>
 					                  <p>
-								<ul>
-											  <li>Designed a Graph Neural Network Aware Knowledge Graph for Information Retrieval and Reasoning for auto-claims and personal line insurance and product reference manual.</li>
-<li>Designing an active labeling feedback system to improve graph-based models through reinforcement learning for better Frequently Asked Questions, Query-Response Results of existing BERT based QA models.</li>
-<li>Designed a VGG Convolution Network based Document Classification model using the RVL Dataset and finetuned it with American Family Insurance Documents (8 Classes) with an accuracy of 91%. Automated the processing of 500k salvage claim per year using this model thus cutting down costs by 95%. Researching further on Graph Neural Networks for document content extraction (tables, values, names, numerical values)</li>
-<li>Working as a Data Scientist Consultant for Prof David Noyce and team from University of Wisconsin, Madison. This is part of American Family Insurance and University collaboration on a project named “Improving Traffic Safety Outcomes Through Data Science Methodologies”.</li>
-									    
-								</ul>	
+										<ul>
+											<li>Working as a Full Stack Developer in the CTO Market innovation Ventures R&D group at Philips India Limited. Involved in multiple healthcare projects with cutting edge technologies</li>
+											<li>Collaborated with team of 8 to develop a teleradiology platform to avoid dependency on third party tool using Google healthcare SDK and took complete ownership for setting up continuous integration and deployment for the same to ensure smooth onboarding.</li>
+											<li>Worked as a Data Scientist for a project involving machine learning and data modeling -document intelligence for medical classification and information extraction to automate processing of 500k medical claim per year, cutting down costs by 90%. 
+													<a href="https://github.com/sindhuharish/sindhuharish.github.io/blob/master/files/DOCIE_Healthcare.pdf">DOCIE Healthcare Paper Publication!</a>
+												</li>
+											<li>Developed a 'Patient Scheduler' application using ReactJS, RestAPIs and Spring Boot Java allowing patients to book appointments for scans such as CT, MRI, X-Ray based on available slots, reducing patients wait time by 3 fold and enabling feasibility</li>
+											<li>Designed and implemented a back-end micro service framework to standardize API calls for China specific downstream nutrition applications, thus enabling de facto norm across Philips China.</li>
+											<li>Implemented and Optimized elastic search index analyzers for efficient persistence and retrieval of data. Reduced average response time from 9 seconds to 2 seconds per request.</li>
+											<li>Managed a cross-functional R&D team in India and China. Received the best employee award for the project 'Health Suite China' in the category 'taking ownership to deliver fast'.</li>
+										</ul>	
 							  </p>
 					               </div>
 					            </div>
@@ -1040,19 +1046,14 @@
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Big Data Technology Analyst - JPMorgan Chase & Co</a><br> <span>July 2016 - July 2018</span></h2>
+					               	<h2><a href="#">Senior Software Engineer - Mindtree Limited (Chief Technology Office), Bangalore, Karnataka, India</a><br> <span>July 2016 - July 2018</span></h2>
 					                  <p>
 										  <ul>
-									   <li>Collaborated with a team of 10 in product design and coding the Data Driven Reporting tool to monitor Credit Usages of clients</li>
-									   <li>Designed a micro-service architecture in Java, Apache Spark, Apache Kafka and Pivotal Gemfire Cache to consume messages for data transformation from upstream systems </li>
-									   <li>Consistently involved in the agile methodology of developing services, writing and testing code with appropriate testing frameworks of Mockito during each requirement phase </li>
-									   <li>Developed Spark Job ETL transformations for Credit Usages by Client, Day, Region and Countrywide </li>
-									   <li>Implemented and Optimized the Bi-temporal database model for efficient storage of data sets in Impala. Reduced production deployment time considerably and facilitated the team with predicative analysis for analytical modeling </li>
-									   <li>Strategic execution of analyzing and building a system to aggregate transactions close to 1,000,000 records a day </li>
-									   <li>Conceptualized aggregation models for Data Acquisition and Data Visualization using Tableau</li>
-									   <li>Developed and Designed various Tableau dashboards for the Front-End office utilizing the near real time data persisted in Cloudera Impala’s MPP database </li>
-									   <li>Developed a framework to Automate end to end process for Data Quality Assurance team to enable easy testing. Reduced overall testing and delivery time by 3-fold</li>
-									   <li>Product added great value to organization, with appreciation from the CFO for bringing it live in 2 years</li>
+									   <li>Worked as a full stack developer for COE (center of excellence) R&D group at Mindtree Limited</li>
+									   <li>Designed and implemented a 'Product recommendation system using Image Recognition' for Procter & Gamble grooming products right from requirement gathering, training the model and developing a website enhancing customer experience and engagement with P&G, thus boosting the profit margin by 3%.</href></li>
+									   <li>Analyzed industry standards for code quality guidelines and took initiative to bring in the Test Driven Development approach for the project -'SITA Departure Control System', reducing the bugs and vulnerabilities from 40% to 20%.</li>
+									   <li>Developed a JMS (Java Message Service) mock framework for testing automation during the server down time, thus enabling smooth testing by reducing overall testing and delivery time by 3-fold.</li>
+									   <li>Collaborated with a group of 10 to a micro-service architecture in Java, Spring boot and Hibernate to develop API’sfor SITA -an airline departure control system.</li>
 								   </ul>
 									  </p>
 								   </div>
@@ -1065,11 +1066,11 @@
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Android Developer - Meesho</a><br> <span>April 2015 - August 2015</span></h2>
+					               	<h2><a href="#">Campus Mind, Internship, Mindtree Limited, Bhubaneshwar, Odisha, India</a><br> <span>April 2015 - August 2015</span></h2>
 					                  <p>
 										  <ul>
-									   <li>Development and delivery of consistent modules for the Android App, facilitating process improvement</li>
-									   <li>Analyze social media trend and implement designs to meet client requirements. Identify and mitigate project management issues</li>
+									   <li>Trained holistically in all domains of technology.</li>
+									   <li>Worked with a team of 8 campus minds. Designed and developed an application for tracking waste management</li>
 								   </ul>
 									  </p>
 					               </div>
