--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/profile_pic.png);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Sindhu Harish</a></h1>
-				<span class="position"><a href="#">Senior Software Engineer</a> in Bangalore</span>
+				<span class="position"><a href="#">Software Engineer II</a><br>Philips India Limited<br>Bangalore, India</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -138,7 +138,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Us</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Sindhu Harish.</strong> I am an Seasoned Senior Software Engineer with 4 years of experience and an aspiring Data Science Enthusiast with a demonstrated history of working in the healthcare industry. Skilled in Jave, Python, Machine Learning, Relational & NoSQL, Big data Hadoop, Spark and Reporting Analytical Tools like Tableau and Metabase. Strong information technology professional with a Bachelor of Engineering (B.E.) focused in Computer Science</p>
+										<p><strong>Hi I'm Sindhu Harish.</strong> I am a Seasoned Senior Software Engineer with 5 years of experience and an aspiring Data Science Enthusiast with a demonstrated history of working in the healthcare industry. Skilled in Jave, ReactJS, Python, Machine Learning, Relational & NoSQL, Big data Hadoop, Spark and Reporting Analytical Tools like Tableau and Metabase. Strong information technology professional with a Bachelor of Engineering (B.E.) focused in Computer Science</p>
 <!--										<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>-->
 									</div>
 								</div>
@@ -938,7 +938,7 @@
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingTwo">
 									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Bachelor Degree of Computer Science and Engineering
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Bachelor of Engineering in Computer Science and Engineering
 									            </a>
 									        </h4>
 									    </div>
@@ -959,23 +959,23 @@
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingThree">
 									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Diploma in Electronics
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Pre University Eductation (11th and 12th grade)
 									            </a>
 									        </h4>
 									    </div>
 									    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 									        <div class="panel-body">
-									        <h4>Bangalore University - R.V Pre-University College        (May 2010 - April 2012)</h4>
-												<p>Bangalore, India</p>
+									        <h4>Govt PU College - Tiptur (May 2010 - April 2012)</h4>
+												<p>Karnataka, India</p>
 												<p>Courses</p>
 													<p>
 														<ul>
-													<li>Electronics</li>
+													<li>Chemistry</li>
 													<li>Physics</li>
 													<li>Mathematics</li>
 														</ul>
 													</p>
-												<p>GPA - 3.9</p>
+												<p>91/100</p>
 											</div>
 									    </div>
 									</div>
@@ -983,15 +983,15 @@
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingFive">
 									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">High School Secondary Education
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">Secondary School Education
 									            </a>
 									        </h4>
 									    </div>
 									    <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
 									        <div class="panel-body">
-									            	<h4>Central Board of Secondary Education     (May 2007 - April 2010)</h4>
-													<p>Bangalore, India</p>
-												<p>GPA - 3.9</p>
+									            	<h4>Govt Girls High School - Tiptur, Karnataka, India   (May 2007 - April 2010)</h4>
+													<p>Tiptur, India</p>
+												<p>93/100</p>
 									        </div>
 									    </div>
 									</div>
@@ -1022,7 +1022,7 @@
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Philips</a><br> <span>July 2019 - Present</span></h2>
+					                  <h2><a href="#">Software Engineer II</a><br><span>Philips India Limited (July 2019 - Present)</span><br><span>Bangalore, India</span></h2>
 					                  <p>
 										<ul>
 											<li>Working as a Full Stack Developer in the CTO Market innovation Ventures R&D group at Philips India Limited. Involved in multiple healthcare projects with cutting edge technologies</li>
@@ -1046,7 +1046,7 @@
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Senior Software Engineer - Mindtree Limited (Chief Technology Office), Bangalore, Karnataka, India</a><br> <span>July 2016 - July 2018</span></h2>
+					               	<h2><a href="#">Senior Software Engineer</a><br><span>Mindtree Limited (July 2016 - July 2019)</span><br><span>Bangalore, India</span></h2>
 					                  <p>
 										  <ul>
 									   <li>Worked as a full stack developer for COE (center of excellence) R&D group at Mindtree Limited</li>
@@ -1066,7 +1066,7 @@
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Campus Mind, Internship, Mindtree Limited, Bhubaneshwar, Odisha, India</a><br> <span>April 2015 - August 2015</span></h2>
+								   <h2><a href="#">Campus Mind, Internship</a><br><span>Mindtree Limited (July 2019 - September 2019)</span><br><span>Bhubaneshwar, India</span></h2>
 					                  <p>
 										  <ul>
 									   <li>Trained holistically in all domains of technology.</li>
@@ -1115,6 +1115,27 @@
 							<p><b>REAL TIME CLOUD SHARING WITH ANDROID APP</b>
 								<li>Dynamic Web Project with discrete functionality of real time file upload and messaging, dynamically scaled to an Android app</li>
 							</p>
+							<p><b>PATIENT SCHEDULER - SCHEDULING PATIENT IMAGING</b>
+								<li>This application enables the patient to schedule their scan which avoids them wasting time while booking over the telephone. Stratify patients and engage with them for pre scan procedures. Notify patients before and after their scans. RIS (Radiology Information System) staff can spend time effectively on their core work rather than scheduling. Application helps to optimize resources effectively to help lower the cost of care</li>
+							</p>
+							<p><b>DOCUMENT CLASSIFICATION AND INFORMATION EXTRACTION</b>
+								<li>A cost-effective and scalable end-to end Document Intelligence pipeline. Application processes around 20000 claims and medical bills per day reducing workforce cost by 300,000$ a year. Designed an Ensemble VGG Region based Convolution plus Text Deep Learning Model for Document Classification and Graph Neural Network coupled with Sequence Model for Information Extraction. Pretrained the model on RVL Dataset and fine-tuned on medical documents (8 Classes) with an accuracy of 98%. Automated the processing of 500k medical claim per year, cutting down costs by 95%</li>
+							</p>
+							<p><b>LIVE WEBINAR - QUESTION AND ANSWER FEATURE</b>
+								<li>This application was developed as proof of concept for implementing live webinar features  on the GHH platform inviting experts on a fortnightly basis and - driving users to sign up to register for the webinar, as well as allowing pre-event and in-event live Q&A via a parallel solution.</li>
+							</p>
+							<p><b>RAAS (READING AS SERVICE)- SOFTWARE DICOM GATEWAY</b>
+								<li>A tele-radiology platform to replace the third party paid tool. To avoid cost and dependency on third party tool, developed a software gateway – ‘DICOM Gateway’ for Hospitals. It shall just convert DIMSE (C-STORE) to DICOMWeb (STOW-RS) and send to “Software-Based DICOM Gateway”. Then “Software-Based Gateway” converts the DICOMWeb (STOW-RS) to DIMSE (C-STORE) to “Carestream gateway RACK”. Then “Carestream gateway RACK” forwards the DICOM to “Carestream PACS”.</li>
+							</p>
+							<p><b>PRODUCT RECOMMENDER USING IMAGE RECOGNITION</b>
+								<li>An application to recommend the set of Procter & Gamble products such as trimmer, skin care products to consumers based on the selfie or image uploaded by them. This is to achieve more consumer engagement helping consumers to choose right products for their skin tone and beard type.</li>
+							</p>
+							<p><b>HEALTH SUITE CHINA (HSC)- NUTRITION APP FOR HEALTH MANAGEMENT</b>
+								<li>The target is to extract and standardize the APIs/Data for China specific Recipe, Food, Food Composition. To make APIs/Data to be adopted by multiple domain relevant propositions, make the APIs and data to be de facto norm across Philips China. This application features are targeted to help people of China to manage their calorie intake, also suggesting them recipes of different food items along with their compositions like proteins, carbohydrates, fat etc.</li>
+							</p>
+							<p><b>SITA-DCS (DEPARTURE CONTROL SYSTEM) </b>
+								<li>SITA is a multinational information technology company providing IT and telecommunication services to the air transport industry. Departure control system application deals with the complete journey of a passenger and is used by Airline to keep track of their Aircrafts and Services.</li>
+							</p>
 						</ul>
 					</div>
 					<div class="row">
@@ -1132,15 +1153,10 @@
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<span class="heading-meta">My Work</span>
 							<h2 class="colorlib-heading animate-box">Github</h2>
-						</div>
-					</div>
-					<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
-		
-					</div>
-					<div class="row">
-						<ul>
+							<ul>
 						<li><a href="https://github.com/sindhuharish?tab=repositories" data-nav-section="about">Github</a></li>
 						</ul>	
+						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box">
@@ -1149,7 +1165,24 @@
 					</div>
 				</div>
 			</section>
-
+             <section class="colorlib-work" data-section="work">
+				<div class="colorlib-narrow-content">
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+							<span class="heading-meta">My Work</span>
+							<h2 class="colorlib-heading animate-box">Research Paper</h2>
+							<ul>
+						<li><a href="https://github.com/sindhuharish/sindhuharish.github.io/blob/master/files/DOCIE_Healthcare.pdf" data-nav-section="about">DOCIE_Healthcare</a></li>
+						</ul>	
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12 animate-box">
+							<p><a class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>
+						</div>
+					</div>
+				</div>
+			</section>
 
 
 			<section class="colorlib-work" data-section="work">
@@ -1165,11 +1198,11 @@
 					</div>
 					<div class="row"> 
 						<ul>
-							<li>Java Core and Advanced Oracle Certified Training (JPMorgan Chase)</li>
-							<li>Apache Spark and Big Data Certification (Edureka)</li>
-							<li>Apache Storm Certification (Edureka) </li>
-							<li>Certified Ethical Hacking (Hacker School) </li>
-							<li>Android Development Training (MyTectra)</li>
+							<li>Java 8 Programming by IKM (International Knowledge Management)</li>
+							<li>Python for Big Data Expert (Edureka)</li>
+							<li>Hibernate by IKM (International Knowledge Management) </li>
+							<li>AWS</li>
+							<li>Agile SAFE training from Philips</li>
 						</ul>
 					</div>
 					<div class="row">
@@ -1195,7 +1228,7 @@
 									<i class="icon-globe-outline"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="#">sindhuananthraj@gmail.com</a></p>
+									<p><a href="#">sindhuharish1507@gmail.com</a></p>
 								</div>
 							</div>
 
@@ -1204,7 +1237,7 @@
 									<i class="icon-map"></i>
 								</div>
 								<div class="colorlib-text">
-									<p>2941 Fish Hatchery Rd, Madison, WI 53713</p>
+									<p>#42, 1st Main Teacher's Layout, Vidyaranyapura, Bangalore 560097</p>
 								</div>
 							</div>
 
@@ -1213,7 +1246,7 @@
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="tel://">+1(608)-(3812493)</a></p>
+									<p><a href="tel://">+91(968)-(6639905)</a></p>
 								</div>
 							</div>
 						</div>
