--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/profile_pic.png);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Sindhu Harish</a></h1>
-				<span class="position"><a href="#">Senior Software Engineer II</a><br>Philips India Limited<br>Bangalore, India</span>
+				<span class="position"><a href="#">Software Engineer II</a><br>Philips India Limited<br>Bangalore, India</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
