--- a/index.html
+++ b/index.html
@@ -1103,6 +1103,9 @@
 					</div>
 					<div class="row"> 
 						<ul>
+							<p><b>MEDICAL RECOMMENDATION SEARCH ENGINE</b>
+								<li>Designed a Big Data Recommendation system (300GB Data) using airflow pipeline for data ingestion, persistence, topic modeling using Spark ML and scheduled data ingestion into Elastic Search and Neo4j graph database. Constructed a knowledge graph on articles and recommend possible co-authorships in future using Random Forest on the graphs with an AUC of 85%</li>
+							</p>	
 							<p><b>DEBLUR IMAGES USING GENERATIVE ADVERSARIAL NEURAL NETWORKS</b>
 								<li>A neural network project on deblurring images using GAN on real time images captured using a high-speed camera, achieved a Peak signal to noise ratio of 24, comparable to the state of art deblur models </li>
 							</p>
