--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/profile_pic.png);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Sindhu Harish</a></h1>
-				<span class="position"><a href="#">Software Engineer II</a><br>Philips India Limited<br>Bangalore, India</span>
+				<span class="position"><a href="#">CS Grad Student at New York University </a><br><br>NY, New York</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -147,7 +147,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Us</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Sindhu Harish.</strong> I am a Seasoned Senior Software Engineer with 5 years of experience and an aspiring Data Science Enthusiast with a demonstrated history of working in the healthcare industry. Skilled in Jave, ReactJS, Python, Machine Learning, Relational & NoSQL, Big data Hadoop, Spark and Reporting Analytical Tools like Tableau and Metabase. Strong information technology professional with a Bachelor of Engineering (B.E.) focused in Computer Science</p>
+										<p><strong>Hi I'm Sindhu Harish.</strong>CS Grad Student at New York University Tandon School of Engineering. Software Engineer with 5 years of experience as a full stack developer and an aspiring Data Science Enthusiast with a demonstrated history of working in the healthcare industry. Skilled in Jave, ReactJS, Python, Machine Learning, Relational & NoSQL, Big data Hadoop, Spark and Reporting Analytical Tools like Tableau and Metabase. Strong information technology professional with a Bachelor of Engineering (B.E.) focused in Computer Science</p>
 <!--										<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>-->
 									</div>
 								</div>
