--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/profile_pic.png);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Sindhu Harish</a></h1>
-				<span class="position"><a href="#">CS Grad Student at New York University</a><br><br>NY, New York</span>
+				<span class="position"><a href="#">CS Grad Student</a><br>New York University Tandon School of Engineering<br>New York City, New York</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
