--- a/index.html
+++ b/index.html
@@ -1240,7 +1240,7 @@
 									<i class="icon-globe-outline"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="#">sindhuharish1507@gmail.com</a></p>
+									<p><a href="#">sh6430@nyu.edu</a></p>
 								</div>
 							</div>
 
@@ -1249,7 +1249,7 @@
 									<i class="icon-map"></i>
 								</div>
 								<div class="colorlib-text">
-									<p>#42, 1st Main Teacher's Layout, Vidyaranyapura, Bangalore 560097</p>
+									<p>416, 73rd street, Brooklyn, New York - 11209</p>
 								</div>
 							</div>
 
@@ -1258,7 +1258,7 @@
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="tel://">+91(968)-(6639905)</a></p>
+									<p><a href="tel://">(+1)929-434-5981</a></p>
 								</div>
 							</div>
 						</div>
