--- a/index.html
+++ b/index.html
@@ -1130,9 +1130,9 @@
 							<p><b>PATIENT SCHEDULER - SCHEDULING PATIENT IMAGING</b>
 								<li>This application enables the patient to schedule their scan which avoids them wasting time while booking over the telephone. Stratify patients and engage with them for pre scan procedures. Notify patients before and after their scans. RIS (Radiology Information System) staff can spend time effectively on their core work rather than scheduling. Application helps to optimize resources effectively to help lower the cost of care</li>
 							</p>
-							<p><b>DOCUMENT CLASSIFICATION AND INFORMATION EXTRACTION</b>
+<!-- 							<p><b>DOCUMENT CLASSIFICATION AND INFORMATION EXTRACTION</b>
 								<li>A cost-effective and scalable end-to end Document Intelligence pipeline. Application processes around 20000 claims and medical bills per day reducing workforce cost by 300,000$ a year. Designed an Ensemble VGG Region based Convolution plus Text Deep Learning Model for Document Classification and Graph Neural Network coupled with Sequence Model for Information Extraction. Pretrained the model on RVL Dataset and fine-tuned on medical documents (8 Classes) with an accuracy of 98%. Automated the processing of 500k medical claim per year, cutting down costs by 95%</li>
-							</p>
+							</p> -->
 							<p><b>LIVE WEBINAR - QUESTION AND ANSWER FEATURE</b>
 								<li>This application was developed as proof of concept for implementing live webinar features  on the GHH platform inviting experts on a fortnightly basis and - driving users to sign up to register for the webinar, as well as allowing pre-event and in-event live Q&A via a parallel solution.</li>
 							</p>
