--- a/index.html
+++ b/index.html
@@ -1037,7 +1037,7 @@
 											<li>Working as a Full Stack Developer in the CTO Market innovation Ventures R&D group at Philips India Limited. Involved in multiple healthcare projects with cutting edge technologies</li>
 											<li>Collaborated with team of 8 to develop a teleradiology platform to avoid dependency on third party tool using Google healthcare SDK and took complete ownership for setting up continuous integration and deployment for the same to ensure smooth onboarding.</li>
 											<li>Worked as a Data Scientist for a project involving machine learning and data modeling -document intelligence for medical classification and information extraction to automate processing of 500k medical claim per year, cutting down costs by 90%. 
-													<a href="https://github.com/sindhuharish/sindhuharish.github.io/blob/master/files/DOCIE_Healthcare.pdf">DOCIE Healthcare Paper Publication!</a>
+<!-- 													<a href="https://github.com/sindhuharish/sindhuharish.github.io/blob/master/files/DOCIE_Healthcare.pdf">DOCIE Healthcare Paper Publication!</a> -->
 												</li>
 											<li>Developed a 'Patient Scheduler' application using ReactJS, RestAPIs and Spring Boot Java allowing patients to book appointments for scans such as CT, MRI, X-Ray based on available slots, reducing patients wait time by 3 fold and enabling feasibility</li>
 											<li>Designed and implemented a back-end micro service framework to standardize API calls for China specific downstream nutrition applications, thus enabling de facto norm across Philips China.</li>
