--- a/index.html
+++ b/index.html
@@ -1177,7 +1177,7 @@
 					</div>
 				</div>
 			</section>
-             <section class="colorlib-work" data-section="work">
+<!--              <section class="colorlib-work" data-section="work">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
@@ -1194,7 +1194,7 @@
 						</div>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 
 			<section class="colorlib-work" data-section="work">
